Feature: Comandos de moderacion para mochilas, mejora auto-recoleccion y layout supervivencia